# sww-kon3

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
examples/: counter.rs  minimal.rs
examples/che6/: app.rs  main.rs  sheet.rs
examples/che6/app/: drawer.rs  mod.rs  objects.rs  pieces.rs
examples/che6/app/objects/: mod.rs  pieces.rs  scalables.rs  tiles.rs
examples/che6/pieces/: color.rs  sheet.rs  type.rs
examples/che6/sheet/: coord.rs  mod.rs  piece_color.rs  piece_type.rs
kon3/: Cargo.toml
kon3-macros/: Cargo.toml
kon3-macros/src/: lib.rs
kon3/examples/: counter.rs
kon3/src/: app.rs  lib.rs  location.rs  prelude.rs  shared.rs
kon3/src/app/: event_handler.rs  mod.rs  signals.rs
kon3/src/drawer/: mod.rs
kon3/src/drawer/resources/: mesh.rs  mod.rs
kon3/src/elements/: label.rs  layers.rs  mod.rs  rect.rs  split.rs
kon3/src/elements/events/: mod.rs  on_click.rs
kon3/src/values/: cache.rs  concat.rs  strfy.rs
kon_macros/: Cargo.toml
kon_macros/src/: lib.rs
src/: affine.rs  affine2.rs  app.rs  app_info.rs  app_settings.rs  bind_buffer.rs  bytes.rs  color.rs  drawer.rs  elements.rs  field_attributes.rs  images.rs  instances.rs  lazy.rs  lib.rs  location.rs  main.rs  mesh.rs  mesh.wgsl  mesh_drawer.rs  polygon.rs  polygon.wgsl  polygon_drawer.rs  prelude.rs  readable_buffer.rs  shaders.rs  shared.rs  transform.rs  values.rs  vec_buffer.rs  vertex.rs  vertex_attribute.rs  vertex_attributes.rs  window.rs
src/app/: handle_event.rs  lazy_windowed_app.rs  mod.rs  pack.rs  windowed_app.rs
src/app/info/: mod.rs
src/app/info/frame/: mod.rs  (+1 more)
src/app/render_window/: error.rs  mod.rs
src/app/windowed/: lazy_windowed.rs  mod.rs
src/app_info/: frame.rs
src/app_info/frame/: commands.rs  surface.rs
src/buffers/: bytes.rs  counted.rs  extensions.rs  mod.rs  mut.rs  mut_vec.rs  readable.rs  typed.rs  vec.rs
src/buffers/buffers/: mod.rs  vec.rs
src/drawer/: mod.rs  resources.rs
src/drawing/: draw.rs  mod.rs
src/drawing/mesh/: drawable.rs  drawer.rs  drawing_info.rs  mod.rs  pipeline.rs
src/elements/: label.rs  layers.rs  rect.rs  split.rs
src/elements/events/: on_click.rs
src/media/: extensions.rs  mod.rs
src/media/sheet/: coord.rs  mod.rs
src/shaders/mesh/: mod.rs  shader.wgsl
src/shared/: lock.rs  mod.rs  read.rs  write.rs
src/utility/: extensions.rs  mod.rs
src/utility/lazy/: inner.rs  mod.rs
src/values/: anchors.rs  arg_src.rs  cache.rs  concat.rs  mod.rs  strfy.rs  value_src.rs
src/values/source/: auto.rs  mod.rs
src/window/: extensions.rs  mod.rs  settings.rs
src/window/render/: frame.rs  mod.rs
sww/: Cargo.toml
sww/che6/app/: drawer.rs  mod.rs
sww/che6/app/objects/: pieces.rs
sww/che6/pieces/: mod.rs
sww/examples/che6/: main.rs
sww/examples/che6/app/: mod.rs
sww/examples/che6/app/objects/: mod.rs
sww/src/: lib.rs
sww/src/app/: handle_event.rs  mod.rs
sww/src/buffers/: bytes.rs  mod.rs  mut.rs  mut_vec.rs  vec.rs
sww/src/drawing/mesh/: mod.rs
sww/src/media/: error.rs
sww/src/shaders/: mod.rs
sww/src/shaders/mesh/: mod.rs  shader.wgsl
sww/src/utility/: lazy.rs
sww/src/window/: aliases.rs  mod.rs  settings.rs
sww/src/window/render/: frame.rs  mod.rs
sww/src/window/render/frame/: commands.rs
sww_extensions/: Cargo.toml
sww_extensions/src/: lib.rs  std.rs  wgpu.rs  winit.rs
(+8 files in other folders)
