[package]
name = "sww"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "*", features = ["derive"] }
winit = "*"
env_logger = "*"
memoffset = "*"
pollster = "*"
image = "*"
wgpu = "*"
glam = { version = "*", features = ["bytemuck"] }
log = "*" # { version = "*", features = ["release_max_level_off"] }
ouroboros = "*"

[build-dependencies]
wgsl_to_wgpu = "*"
cargo-emit = "*"

[dev-dependencies]
strum = "*"
strum_macros = "*"
