[package]
name = "kon3"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
kon3-macros = { path = "kon3-macros" }
sww = { path = "../sww" }

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

arithmetic_side_effects = "allow"
blanket_clippy_restriction_lints = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_inline_in_public_items = "allow"
missing_panics_doc = "allow"
missing_trait_methods = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
pattern_type_mismatch = "allow"
pub_use = "allow"
question_mark_used = "allow"
shadow_reuse = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
todo = "allow"
wildcard_enum_match_arm = "allow"