[package]
name = "kon3"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true

[dependencies]
kon3-macros = { path = "kon3-macros" }
sww = { path = "../sww" } # git = "https://github.com/ItzShiney/sww"

[lints.clippy]
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }

absolute_paths = "allow"
arithmetic_side_effects = "allow"
as_conversions = "allow"
as_underscore = "allow"
blanket_clippy_restriction_lints = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
exhaustive_enums = "allow"
exhaustive_structs = "allow"
expect_used = "allow"
float_arithmetic = "allow"
impl_trait_in_params = "allow"
implicit_return = "allow"
min_ident_chars = "allow"
missing_docs_in_private_items = "allow"
missing_errors_doc = "allow"
missing_inline_in_public_items = "allow"
missing_panics_doc = "allow"
missing_trait_methods = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
pattern_type_mismatch = "allow"
pub_use = "allow"
question_mark_used = "allow"
return_self_not_must_use = "allow"
shadow_reuse = "allow"
single_char_lifetime_names = "allow"
std_instead_of_alloc = "allow"
std_instead_of_core = "allow"
todo = "allow"
unwrap_used = "allow"
wildcard_enum_match_arm = "allow"
