[package]
name = "sww"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "*", features = ["derive"] }
glam = { version = "*", features = ["bytemuck"] }
image = "*"
memoffset = "*"
parking_lot = "*"
pollster = "*"
wgpu = "*"
winit = "*"

[build-dependencies]
cargo-emit = "*"
wgsl_to_wgpu = "*"

[dev-dependencies]
strum = "*"
strum_macros = "*"
